feat: Enhance error handling and UI feedback
This commit introduces more specific error handling for network and API issues, providing clearer feedback to the user. It also includes UI improvements such as a favicon and a beta tag for the template creation feature. The processing state is now explicitly set before file reading.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="da">
   <head>
-    <meta charset="UTF-g" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta charset="UTF-8" />
+    <link rel="shortcut icon" href="/owl-icon-png.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/owl-icon-png.png" />
+    <link rel="apple-touch-icon" href="/owl-icon-png.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Obedai</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
