--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
   "imports": {
     "react": "https://esm.sh/react@^19.1.1",
     "react/": "https://esm.sh/react@^19.1.1/",
+    "react-dom": "https://esm.sh/react-dom@^19.1.1",
     "react-dom/": "https://esm.sh/react-dom@^19.1.1/",
+    "react-dom/client": "https://esm.sh/react-dom@^19.1.1/client",
     "@google/genai": "https://esm.sh/@google/genai@^1.14.0",
     "jspdf": "https://esm.sh/jspdf@^2.5.1",
     "html2canvas": "https://esm.sh/html2canvas@^1.4.1"
