--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             },
             fontFamily: {
               sans: ['Inter', 'sans-serif'],
+              mono: ['ui-monospace', 'SFMono-Regular', 'Menlo', 'Monaco', 'Consolas', '"Liberation Mono"', '"Courier New"', 'monospace'],
             },
             keyframes: {
                 'fade-in': {
