--- a/index.html
+++ b/index.html
@@ -45,11 +45,27 @@
                 'slide-up': {
                     from: { transform: 'translateY(20px)', opacity: '0' },
                     to: { transform: 'translateY(0)', opacity: '1' },
+                },
+                'gradient-pan': {
+                    '0%': { backgroundPosition: '0% 50%' },
+                    '50%': { backgroundPosition: '100% 50%' },
+                    '100%': { backgroundPosition: '0% 50%' },
+                },
+                'background-pan': {
+                    '0%': { backgroundPosition: '0% 50%' },
+                    '50%': { backgroundPosition: '100% 50%' },
+                    '100%': { backgroundPosition: '0% 50%' },
+                },
+                'sparkle': {
+                    '0%, 100%': { opacity: '0', transform: 'scale(0.5) rotate(0deg)' },
+                    '50%': { opacity: '1', transform: 'scale(1.2) rotate(180deg)' },
                 }
             },
             animation: {
                 'fade-in': 'fade-in 0.3s ease-out forwards',
                 'slide-up': 'slide-up 0.3s ease-out forwards',
+                'gradient-pan': 'gradient-pan 4s ease infinite',
+                'background-pan': 'background-pan 10s ease infinite',
             }
           }
         }
@@ -107,6 +123,13 @@
         @keyframes pulse {
             0%, 100% { opacity: 1; transform: scaleX(1); }
             50% { opacity: 0.6; transform: scaleX(0.98); }
+        }
+        .animated-text-gradient {
+            background: linear-gradient(90deg, #6366f1, #a855f7, #ec4899);
+            background-size: 200% 200%;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            animation: gradient-pan 4s ease infinite;
         }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
