--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
     "react-dom/client": "https://esm.sh/react-dom@^19.1.1/client",
     "@google/genai": "https://esm.sh/@google/genai@^1.14.0",
     "jspdf": "https://esm.sh/jspdf@^2.5.1",
-    "html2canvas": "https://esm.sh/html2canvas@^1.4.1"
+    "html2canvas": "https://esm.sh/html2canvas@^1.4.1",
+    "react-markdown": "https://esm.sh/react-markdown@^9.0.1"
   }
 }
 </script>
