--- a/index.html
+++ b/index.html
@@ -57,8 +57,12 @@
                     '100%': { backgroundPosition: '0% 50%' },
                 },
                 'sparkle': {
-                    '0%, 100%': { opacity: '0', transform: 'scale(0.5) rotate(0deg)' },
-                    '50%': { opacity: '1', transform: 'scale(1.2) rotate(180deg)' },
+                    '0%, 100%': { opacity: '0', transform: 'scale(0.5)' },
+                    '50%': { opacity: '1', transform: 'scale(1)' },
+                },
+                'shooting-star': {
+                    '0%': { transform: 'translateX(0)', opacity: '1' },
+                    '100%': { transform: 'translateX(150vw)', opacity: '0' },
                 }
             },
             animation: {
@@ -66,6 +70,8 @@
                 'slide-up': 'slide-up 0.3s ease-out forwards',
                 'gradient-pan': 'gradient-pan 4s ease infinite',
                 'background-pan': 'background-pan 10s ease infinite',
+                'sparkle': 'sparkle 2s ease-in-out infinite',
+                'shooting-star': 'shooting-star 2s ease-in infinite',
             }
           }
         }
